--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "root",
+  "name": "@jdfwarrior/root",
   "version": "3.1.0",
   "dependencies": {
     "murl": "0.4.x",
     "protein": "0.5.x",
     "network-address": "0.0.x"
   },
-  "repository": "git://github.com/mafintosh/root",
+  "repository": "git://github.com/jdfwarrior/root",
   "description": "a super lightweight web framework featuring prototype mixin support and routing",
   "keywords": [
     "lightweight",
@@ -15,7 +15,7 @@
     "mixin",
     "http"
   ],
-  "author": "Mathias Buus Madsen <mathiasbuus@gmail.com>",
+  "author": "David Ferguson <david@ferg.co>",
   "scripts": {
     "test": "node tests"
   }
